Fix dropdown z-index issue

--- a/src/css/output.css
+++ b/src/css/output.css
@@ -1490,6 +1490,11 @@
       right: calc(var(--spacing) * 0);
     }
   }
+  .lg\:z-70 {
+    @media (width >= 64rem) {
+      z-index: 70;
+    }
+  }
   .lg\:z-80 {
     @media (width >= 64rem) {
       z-index: 80;
@@ -1543,6 +1548,11 @@
   .lg\:flex-row {
     @media (width >= 64rem) {
       flex-direction: row;
+    }
+  }
+  .lg\:justify-between {
+    @media (width >= 64rem) {
+      justify-content: space-between;
     }
   }
   .lg\:space-x-24 {
